--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,9 @@ project(smarthome)
 cmake_minimum_required(VERSION 3.5)
 
 find_package(OpenSSL REQUIRED)
-target_link_libraries(main PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+find_package(Boost REQUIRED system)
+find_package(spdlog CONFIG REQUIRED)    
+
+add_executable(smarthome main.cpp)
+target_link_libraries(smarthome PRIVATE OpenSSL::SSL OpenSSL::Crypto ${Boost_LIBRARIES} spdlog::spdlog)
+target_include_directories(smarthome PRIVATE ${Boost_INCLUDE_DIRS})
