--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ find_package(Boost REQUIRED system)
 find_package(spdlog CONFIG REQUIRED)    
 
 add_executable(smarthome main.cpp)
-target_link_libraries(smarthome PRIVATE OpenSSL::SSL OpenSSL::Crypto ${Boost_LIBRARIES} spdlog::spdlog)
+target_link_libraries(smarthome PRIVATE OpenSSL::SSL OpenSSL::Crypto ${Boost_LIBRARIES} spdlog::spdlog pthread)
 target_include_directories(smarthome PRIVATE ${Boost_INCLUDE_DIRS})
